[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Font/CatChild_base_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Scores/Scores.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/FinDePartie/FinDePartie.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 118.0
margin_top = -38.0
margin_right = 204.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRejouer" type="Button" parent="VBoxContainer"]
margin_right = 153.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "Rejouer"

[node name="ButtonQuitter" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 153.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 1 )
text = "Quitter"
[connection signal="pressed" from="VBoxContainer/ButtonRejouer" to="." method="_on_ButtonRejouer_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuitter" to="." method="_on_ButtonQuitter_pressed"]
